Name:          chunked-conduit
Version:       0.1
Description:   Perfect streaming for conduit
Author:        Jonathan S
Build-Type:    Simple
Cabal-Version: >=1.8

library
    HS-Source-Dirs:  src
    Build-Depends:   base, conduit, text
    Exposed-modules: Data.Conduit.Chunked, Data.Conduit.Chunked.Base, Data.Conduit.Chunked.Helper, Data.Conduit.Chunked.Text
    ghc-options:     -Wall
